--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<h1>SayPay</h1>
+<h1 class="text-1xl">SayPay</h1>
 <p>Welcome to SayPay, your personal expense tracker and chat assistant!</p>
 <p>Get started by creating a new trip or starting a chat.</p>
 <%= link_to "Test", "#", class: "btn btn-primary" %>
+
+<%= link_to "Test", "#", class: "btn  " %>
