--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,15 @@
       </script>
 
   </head>
-
   <body>
     <%= yield %>
+    <nav>
+      <% if user_signed_in? %>
+        <%= render "shared/navbar_logged" %>
+      <% else %>
+        <%= render "shared/navbar_public" %>
+      <% end %>
+    </nav>
+
   </body>
 </html>
