--- a/app/views/shared/_navbar_public.html.erb
+++ b/app/views/shared/_navbar_public.html.erb
@@ -1,17 +1,17 @@
 <div class="navbar max-w-[390px] flex justify-between border px-10 py-5">
 
     <%# Trips %>
-    <%= link_to("#", class: "btn btn-ghost btn-circle") do %>
+    <%= link_to(trips_path, class: "btn btn-ghost btn-circle") do %>
        <i data-lucide="tickets"></i>
     <%end%>
 
     <%# Voice Record %>
     <%= link_to("#", class: "btn btn-ghost btn-circle") do %>
       <i data-lucide="mic"></i>
-    <%end%>
+    <% end %>
 
     <%# Dashboard %>
-    <%= link_to("#", class: "btn btn-ghost btn-circle") do %>
+    <%= link_to(expenses_path, class: "btn btn-ghost btn-circle") do %>
       <i data-lucide="layout-dashboard"></i>
     <%end%>
 
