--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -1,6 +1,6 @@
-<%= turbo_stream.append "messages" do %>
-  <%= render "messages/message", messages: @chat.messages.last(2) %>
-<% end %>
+<%# >> turbo_stream.append "messages" do  %>
+  <%# >> render "messages/messages", messages: @chat.messages.last(2)  %>
+<%# >> end  %>
 
 <%= turbo_stream.update "new_message_container" do %>
   <%= render "messages/form", chat: @chat, message: Message.new %>
