Desgined finished for the demo.

--- a/app/views/shared/_navbar_logged.html.erb
+++ b/app/views/shared/_navbar_logged.html.erb
@@ -1,19 +1,19 @@
-<div class="navbar max-w-[390px] flex justify-between border-t px-10 py-5">
+<div class="navbar flex justify-between px-10 py-5 bg-[#FFFFFF]">
 
     <%# Trips %>
     <%= link_to(trips_path, class: "btn btn-ghost btn-circle") do %>
        <i data-lucide="tickets"></i>
     <%end%>
 
-    <%# Voice Record %>
-    <%= link_to("#", class: "btn btn-ghost btn-circle") do %>
-      <i data-lucide="mic"></i>
-    <% end %>
-
     <%# Dashboard %>
     <%= link_to(expenses_path, class: "btn btn-ghost btn-circle") do %>
       <i data-lucide="layout-dashboard"></i>
     <%end%>
+
+    <%# Voice Record %>
+    <%= link_to("#", class: "btn btn-circle bg-[#21A179] text-white") do %>
+      <i data-lucide="mic"></i>
+    <% end %>
 
     <%# Chat %>
     <%= link_to("#", class: "btn btn-ghost btn-circle") do %>
