--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
   </head>
   <body>
-    <div class="flex flex-col h-screen">
+    <div class="flex flex-col h-screen bg-[#21A179]">
         <%= yield %>
       <nav>
         <% if user_signed_in? %>
