started desgining record expense pag2e.

--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -33,7 +33,7 @@
   <% end %>
 </div>
 
-<%# In stimulus and JS file! %>
+<%# yesIn stimulus and JS file! %>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const startBtn = document.getElementById('start-recording')
