started desgining record expense pag2e.

--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -33,6 +33,8 @@
   <% end %>
 </div>
 
+<p class="hello"></p>
+
 <%# yesIn stimulus and JS file! %>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
