updated header and footer and first changes to record button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,15 +23,32 @@
       </script>
 
   </head>
-  <body>
-    <div class="flex flex-col h-screen bg-[#21A179]">
+<body>
+
+  <% if show_nav_and_header? %>
+    <div class="min-h-screen flex flex-col bg-[#21A179]">
+
+      <%# HEADER %>
+      <header>
+        <%= render "shared/header" %>
+      </header>
+
+      <%# MAIN CONTENT (scrolls above navbar) %>
+      <main class="flex-1 overflow-y-auto bg-[#F2FFFB] rounded-t-2xl">
         <%= yield %>
-      <nav>
-        <% if user_signed_in? %>
-          <%= render "shared/navbar_logged" %>
-        <% end %>
+      </main>
+
+      <%# NAVBAR (always visible) %>
+      <nav class="fixed bottom-0 left-0 right-0 bg-white z-50 border-t border-gray-200">
+        <%= render "shared/navbar_logged" %>
       </nav>
 
     </div>
-  </body>
+
+  <% else %> 
+    <%# HOME PAGE (no header, no navbar) %>
+    <%= yield %>
+  <% end %>
+
+</body>
 </html>
