--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,6 @@
 <%# CONTAINER %>
 <div class="p-6 flex flex-col items-center" data-controller="recording">
+  <div></div>
 
   <%# TRIP BANNER %>
   <div class="w-full bg-white rounded-xl shadow-sm p-4 mb-8 flex items-center gap-4">
