--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_area :content, class: "border-none outline-none resize-none", placeholder: "Ask anything..", required: true %>
 
   <div class="flex justify-end mt-2">
-    <%= f.submit "Send", class: "float-right border px-4 py-2 bg-white hover:bg-gray-100 rounded" %>
+    <%= f.submit "Send", class: "float-right border px-4 py-2 bg-white hover:bg-gray-100 rounded-xl" %>
   </div>
 
 <%end%>
