--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -13,7 +13,7 @@
       </h2>
 
       <p class="text-sm text-[#06231B]/60">
-        22nd November to 30th November
+        <%= "from #{@trip.start_date.strftime('%d %B')} to #{@trip.end_date.strftime('%d %B %Y')}" %>
       </p>
 
       <p class="text-sm text-[#06231B]/60 mt-1">
@@ -67,10 +67,10 @@
 
 
   <%# HIDDEN FIELDS %>
-  <%= form_with model: [@trip, @expense], 
-    data: { recording_target: "form" }, 
-    id: "recording-form", 
-    local: true, 
+  <%= form_with model: [@trip, @expense],
+    data: { recording_target: "form" },
+    id: "recording-form",
+    local: true,
     html: { multipart: true } do |f| %>
 
     <%= f.hidden_field :trip_id, value: @trip.id %>
